--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>data visualization projects</title>
+<title>javier.artiga.es/rec/</title>
 <style>
 .markdown-body .octicon {
   display: inline-block;
