--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 </head>
 <body>
 <div id="simp" data-config='{"shide_top":false,"shide_btm":false,"auto_load":false}'>
-  <h1 style="text-align: center">demo1</h1><a id="demo1" href="#demo1"></a>
   <div class="simp-playlist">
+  <h1 style="text-align: center">demo1</h1><a id="demo1" href="#demo1"></a>
     <ul>
       <li class="simp-active">
         <span class="simp-source" data-src="https://javier.artiga.es/rec/20240925-demo1-jartigag-lalayu.mp3">Lala Yú</span>
@@ -92,6 +92,34 @@
       <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/20250109-demo1-jparra-el_baile.mp3">El baile</span>
         <span class="simp-desc">jparra</span>
+      </li>
+    </ul>
+  <h1 style="text-align: center">covers</h1><a id="covers" href="#covers"></a>
+    <ul>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v01-sexy_zebras-nena_en_a.mp3">Nena (en A)</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=-PuyUVIngZo&origin=https://javier.artiga.es">Nena</span-->
+        <span class="simp-desc">Sexy Zebras</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v02-los_zigarros-disparame.mp3">Dispárame</span>
+        <span class="simp-desc">Los Zigarros</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v03-pereza-yo_naci_para_estar_en_un_conjunto.mp3">Yo Nací para Estar en un Conjunto</span>
+        <span class="simp-desc">Pereza</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v04-nina_polaca-dolores_rayo.mp3">Dolores Rayo</span>
+        <span class="simp-desc">Niña Polaca</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v05-la_paloma-quejas_clebres.mp3">Quejas Célebres</span>
+        <span class="simp-desc">La Paloma</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v06-zenttric-solo_quiero_bailar.mp3">Solo quiero bailar</span>
+        <span class="simp-desc">Zenttric</span>
       </li>
     </ul>
   </div>
