--- a/index.html
+++ b/index.html
@@ -103,23 +103,53 @@
       </li>
       <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/v02-los_zigarros-disparame.mp3">Dispárame</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=IBSOmUdhRVs&origin=https://javier.artiga.es">Dispárame</span-->
         <span class="simp-desc">Los Zigarros</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/v03-pereza-yo_naci_para_estar_en_un_conjunto.mp3">Yo Nací para Estar en un Conjunto</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=LwqB7CcA2kI&origin=https://javier.artiga.es">Yo Nací para Estar en un Conjunto</span-->
         <span class="simp-desc">Pereza</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/v04-nina_polaca-dolores_rayo.mp3">Dolores Rayo</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=cYk3v_G2y5U&origin=https://javier.artiga.es">Dolores Rayo</span-->
         <span class="simp-desc">Niña Polaca</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/v05-la_paloma-quejas_clebres.mp3">Quejas Célebres</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=FEB21z3eZ9w&origin=https://javier.artiga.es">Quejas Célebres</span-->
         <span class="simp-desc">La Paloma</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v06-zenttric-solo_quiero_bailar.mp3">Solo quiero bailar</span>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v06-fito_y_fitipaldis-rojitas_las_orejas.mp3">Rojitas las orejas</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=myb0x-SyXdc&origin=https://javier.artiga.es">Rojitas las orejas</span-->
+        <span class="simp-desc">Fito y Fitipaldis</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v07-zenttric-solo_quiero_bailar_en_a.mp3">Solo quiero bailar (en A)</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=XAmFdx99qC0&origin=https://javier.artiga.es">Solo quiero bailar</span-->
         <span class="simp-desc">Zenttric</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v08-los_zigarros-dentro_de_la_ley.mp3">Dentro De La Ley</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=1mV4yNaXNEI&origin=https://javier.artiga.es">Dentro De La Ley</span-->
+        <span class="simp-desc">Los Zigarros</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v09-pereza-lady_madrid.mp3">Lady Madrid</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=wR7drA4SCb4&origin=https://javier.artiga.es">Lady Madrid</span-->
+        <span class="simp-desc">Pereza</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v10-loquillo_y_los_trogloditas-el_rompeolas.mp3">El rompeolas</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=qXj9EggtGio&origin=https://javier.artiga.es">El rompeolas</span-->
+        <span class="simp-desc">Loquillo y Los Trogloditas</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v11-fito_y_fitipaldis-por_la_boca_vive_el_pez.mp3">Por la boca vive el pez</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=KfHdel_pK9g&origin=https://javier.artiga.es">Por la boca vive el pez</span-->
+        <span class="simp-desc">Fito y Fitipaldis</span>
       </li>
     </ul>
   </div>
