--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <span class="simp-desc">Los Zigarros</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v09-pereza-lady_madrid.mp3">Lady Madrid</span>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/v09-pereza-lady_madrid_en_f.mp3">Lady Madrid (en F)</span>
         <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=wR7drA4SCb4&origin=https://javier.artiga.es">Lady Madrid</span-->
         <span class="simp-desc">Pereza</span>
       </li>
