--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport"            content="width=device-width, initial-scale=1.0">
-<meta name="description" "">
+<meta name="description" "recordings">
 <meta property="og:locale"       content="es"/>
 <meta property="og:type"         content="website"/>
 <meta property="og:site_name"    content="javier artiga"/><title>javier.artiga.es</title>
-<meta property="og:title"        content="recs/"/>
-<meta property="og:description"  content=""/>
+<meta property="og:title"        content="rec/"/>
+<meta property="og:description"  content="recordings"/>
 <meta property="og:image"        content="https://javier.artiga.es/rec/sc.png"/>
 <meta name="twitter:card"        content="summary_large_image"/>
 <meta name="twitter:site"        content="javier.artiga.es"/>
-<meta name="twitter:title"       content="recs/"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:title"       content="rec/"/>
+<meta name="twitter:description" content="recordings"/>
 <meta name="twitter:image"       content="https://javier.artiga.es/rec/sc.png"/>
 <style>
   @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
@@ -82,7 +82,7 @@
   #simp .simp-time .simp-slash,#simp .simp-time .end-time{display:none;}
   }
 </style>
-<title>recs/</title>
+<title>rec/</title>
 </head>
 <body>
 <div id="simp" data-config='{"shide_top":false,"shide_btm":false,"auto_load":false}'>
