--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         <span class="simp-desc">jparra</span>
       </li>
       <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos de notas</span>
+        <span class="simp-desc">jartiga y jparra</span>
+      </li>
+      <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/20250109-demo1-jparra-el_baile.mp3">El baile</span>
         <span class="simp-desc">jparra</span>
       </li>
