--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
         <span class="simp-desc">jparra</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos de notas</span>
-        <span class="simp-desc">jartiga y jparra</span>
-      </li>
-      <li>
         <span class="simp-source" data-src="https://javier.artiga.es/rec/20250109-demo1-jparra-el_baile.mp3">El baile</span>
         <span class="simp-desc">jparra</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250828-demo1-jartigayjparra-trozos_de_notas.wav">Trozos de notas</span>
+        <span class="simp-desc">jartiga y jparra</span>
       </li>
     </ul>
   <h1 style="text-align: center">covers</h1><a id="covers" href="#covers"></a>
