--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <span class="simp-desc">jparra</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250828-demo1-jartigayjparra-trozos_de_notas.wav">Trozos de notas</span>
+        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos de notas</span>
         <span class="simp-desc">jartiga y jparra</span>
       </li>
     </ul>
