--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </li>
     </ul>
   </div>
-  <div class="simp-footer">Made with 💖 by Sekedus</div>
+  <div class="simp-footer">made with 💙 by jartigag (based on sekedus' player)</div>
 </div>
 </body>
 <script>
