--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <meta name="description" "recordings">
 <meta property="og:locale"       content="es"/>
 <meta property="og:type"         content="website"/>
-<meta property="og:site_name"    content="javier artiga"/><title>javier.artiga.es</title>
+<meta property="og:site_name"    content="javier artiga"/><title>jartigag.github.io</title>
 <meta property="og:title"        content="rec/"/>
 <meta property="og:description"  content="recordings"/>
-<meta property="og:image"        content="https://javier.artiga.es/rec/sc.png"/>
+<meta property="og:image"        content="https://jartigag.github.io/rec/sc.png"/>
 <meta name="twitter:card"        content="summary_large_image"/>
-<meta name="twitter:site"        content="javier.artiga.es"/>
+<meta name="twitter:site"        content="jartigag.github.io"/>
 <meta name="twitter:title"       content="rec/"/>
 <meta name="twitter:description" content="recordings"/>
-<meta name="twitter:image"       content="https://javier.artiga.es/rec/sc.png"/>
+<meta name="twitter:image"       content="https://jartigag.github.io/rec/sc.png"/>
 <style>
   @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
   *,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
@@ -90,81 +90,93 @@
   <h1 style="text-align: center">demo1</h1><a id="demo1" href="#demo1"></a>
     <ul>
       <li class="simp-active">
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20240925-demo1-jartigag-lalayu.mp3">Lala Yú</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20240925-demo1-jartigag-lalayu.mp3">Lala Yú</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20241015-demo1-jartigag-planeta_cama.mp3">Planeta Cama</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20241015-demo1-jartigag-planeta_cama.mp3">Planeta Cama</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250109-demo1-jparra-decir_que_me_quieres.mp3">Decir que me quieres</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250109-demo1-jparra-decir_que_me_quieres.mp3">Decir Que Me Quieres</span>
         <span class="simp-desc">jparra</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250109-demo1-jparra-el_baile.mp3">El baile</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250109-demo1-jparra-el_baile.mp3">El Baile</span>
         <span class="simp-desc">jparra</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos de notas</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos de Notas</span>
         <span class="simp-desc">jartiga y jparra</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250717-de_@jartigag@mastodon.social_para_@bufetalmeida@mastodon.social.ogg">Soneto Imperfecto</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20251202-demo1-jartigag-fria_flor.mp3">Fría Flor</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250717-de_@jartigag@mastodon.social_para_@bufetalmeida@mastodon.social.ogg">Soneto imperfecto</span>
+        <span class="simp-desc">jartiga</span>
       </li>
     </ul>
   <h1 style="text-align: center">covers</h1><a id="covers" href="#covers"></a>
     <ul>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v01-sexy_zebras-nena_en_a.mp3">Nena (en A)</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=-PuyUVIngZo&origin=https://javier.artiga.es">Nena</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v01-sexy_zebras-nena_en_a.mp3">Nena (en A)</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=-PuyUVIngZo&origin=https://jartigag.github.io">Nena</span-->
         <span class="simp-desc">Sexy Zebras</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v02-los_zigarros-disparame.mp3">Dispárame</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=IBSOmUdhRVs&origin=https://javier.artiga.es">Dispárame</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v02-los_zigarros-disparame.mp3">Dispárame</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=IBSOmUdhRVs&origin=https://jartigag.github.io">Dispárame</span-->
         <span class="simp-desc">Los Zigarros</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v03-pereza-yo_naci_para_estar_en_un_conjunto.mp3">Yo Nací para Estar en un Conjunto</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=LwqB7CcA2kI&origin=https://javier.artiga.es">Yo Nací para Estar en un Conjunto</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v03-pereza-yo_naci_para_estar_en_un_conjunto.mp3">Yo Nací para Estar en un Conjunto</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=LwqB7CcA2kI&origin=https://jartigag.github.io">Yo Nací para Estar en un Conjunto</span-->
         <span class="simp-desc">Pereza</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v04-nina_polaca-dolores_rayo.mp3">Dolores Rayo</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=cYk3v_G2y5U&origin=https://javier.artiga.es">Dolores Rayo</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v04-nina_polaca-dolores_rayo.mp3">Dolores Rayo</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=cYk3v_G2y5U&origin=https://jartigag.github.io">Dolores Rayo</span-->
         <span class="simp-desc">Niña Polaca</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v05-la_paloma-quejas_clebres.mp3">Quejas Célebres</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=FEB21z3eZ9w&origin=https://javier.artiga.es">Quejas Célebres</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v05-la_paloma-quejas_clebres.mp3">Quejas Célebres</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=FEB21z3eZ9w&origin=https://jartigag.github.io">Quejas Célebres</span-->
         <span class="simp-desc">La Paloma</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v06-fito_y_fitipaldis-rojitas_las_orejas.mp3">Rojitas las orejas</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=myb0x-SyXdc&origin=https://javier.artiga.es">Rojitas las orejas</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v06-fito_y_fitipaldis-rojitas_las_orejas.mp3">Rojitas las orejas</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=myb0x-SyXdc&origin=https://jartigag.github.io">Rojitas las orejas</span-->
         <span class="simp-desc">Fito y Fitipaldis</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v07-zenttric-solo_quiero_bailar_en_a.mp3">Solo quiero bailar (en A)</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=XAmFdx99qC0&origin=https://javier.artiga.es">Solo quiero bailar</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v07-zenttric-solo_quiero_bailar_en_a.mp3">Solo quiero bailar (en A)</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=XAmFdx99qC0&origin=https://jartigag.github.io">Solo quiero bailar</span-->
         <span class="simp-desc">Zenttric</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v08-los_zigarros-dentro_de_la_ley.mp3">Dentro De La Ley</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=1mV4yNaXNEI&origin=https://javier.artiga.es">Dentro De La Ley</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v08-los_zigarros-dentro_de_la_ley.mp3">Dentro De La Ley</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=1mV4yNaXNEI&origin=https://jartigag.github.io">Dentro De La Ley</span-->
         <span class="simp-desc">Los Zigarros</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v09-pereza-lady_madrid_en_f.mp3">Lady Madrid (en F)</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=wR7drA4SCb4&origin=https://javier.artiga.es">Lady Madrid</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v09-pereza-lady_madrid_en_f.mp3">Lady Madrid (en F)</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=wR7drA4SCb4&origin=https://jartigag.github.io">Lady Madrid</span-->
         <span class="simp-desc">Pereza</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v10-loquillo_y_los_trogloditas-el_rompeolas.mp3">El rompeolas</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=qXj9EggtGio&origin=https://javier.artiga.es">El rompeolas</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v10-loquillo_y_los_trogloditas-el_rompeolas.mp3">El rompeolas</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=qXj9EggtGio&origin=https://jartigag.github.io">El rompeolas</span-->
         <span class="simp-desc">Loquillo y Los Trogloditas</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://javier.artiga.es/rec/v11-fito_y_fitipaldis-por_la_boca_vive_el_pez.mp3">Por la boca vive el pez</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=KfHdel_pK9g&origin=https://javier.artiga.es">Por la boca vive el pez</span-->
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v11-fito_y_fitipaldis-por_la_boca_vive_el_pez.mp3">Por la boca vive el pez</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=KfHdel_pK9g&origin=https://jartigag.github.io">Por la boca vive el pez</span-->
         <span class="simp-desc">Fito y Fitipaldis</span>
       </li>
     </ul>
