--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport"            content="width=device-width, initial-scale=1.0">
-<meta name="description" "recordings">
+<meta name="description"         content="recordings">
 <meta property="og:locale"       content="es"/>
 <meta property="og:type"         content="website"/>
 <meta property="og:site_name"    content="javier artiga"/><title>jartigag.github.io</title>
