--- a/index.html
+++ b/index.html
@@ -87,16 +87,31 @@
 <body>
 <div id="simp" data-config='{"shide_top":false,"shide_btm":false,"auto_load":false}'>
   <div class="simp-playlist">
-  <h1 style="text-align: center">demo1</h1><a id="demo1" href="#demo1"></a>
+  <h1 style="text-align: center">[2012/24] maqueta</h1><a id="maqueta" href="#maqueta"></a>
     <ul>
-      <li class="simp-active">
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/20240925-demo1-jartigag-lalayu.mp3">Lala Yú</span>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Un Error Sin Ella</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/20241015-demo1-jartigag-planeta_cama.mp3">Planeta Cama</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Messie Le Noir</span>
         <span class="simp-desc">jartiga</span>
       </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Nena</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Noches En Vilo</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Pero Ya No Es</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+    </ul>
+  <h1 style="text-align: center">[2025] demo1-jparra</h1><a id="demo1-jparra" href="#demo1-jparra"></a>
+    <ul>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/20250109-demo1-jparra-decir_que_me_quieres.mp3">Decir Que Me Quieres</span>
         <span class="simp-desc">jparra</span>
@@ -105,35 +120,39 @@
         <span class="simp-source" data-src="https://jartigag.github.io/rec/20250109-demo1-jparra-el_baile.mp3">El Baile</span>
         <span class="simp-desc">jparra</span>
       </li>
-      <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos de Notas</span>
-        <span class="simp-desc">jartiga y jparra</span>
-      </li>
+    </ul>
+  <h1 style="text-align: center">[2025] demo1-jartiga</h1><a id="demo1-jartiga" href="#demo1-jartiga"></a>
+    <ul>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/20250717-de_@jartigag@mastodon.social_para_@bufetalmeida@mastodon.social.ogg">Soneto Imperfecto</span>
         <span class="simp-desc">jartiga</span>
+      </li>
+      <li class="simp-active">
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20240925-demo1-jartigag-lalayu.mp3">Lala Yú</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20241015-demo1-jartigag-planeta_cama.mp3">Planeta Cama</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+    </ul>
+  <h1 style="text-align: center">[2025] demo2-jartiga</h1><a id="demo2-jartiga" href="#demo2-jartiga"></a>
+    <ul>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos De Notas</span>
+        <span class="simp-desc">jartiga y jparra</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/20251202-demo1-jartigag-fria_flor.mp3">Fría Flor</span>
         <span class="simp-desc">jartiga</span>
       </li>
     </ul>
-  <h1 style="text-align: center">covers</h1><a id="covers" href="#covers"></a>
+  <h1 style="text-align: center">[2024/25] covers_en_dúo</h1><a id="covers" href="#covers"></a>
     <ul>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/v01-sexy_zebras-nena_en_a.mp3">Nena (en A)</span>
         <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=-PuyUVIngZo&origin=https://jartigag.github.io">Nena</span-->
         <span class="simp-desc">Sexy Zebras</span>
-      </li>
-      <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/v02-los_zigarros-disparame.mp3">Dispárame</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=IBSOmUdhRVs&origin=https://jartigag.github.io">Dispárame</span-->
-        <span class="simp-desc">Los Zigarros</span>
-      </li>
-      <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/v03-pereza-yo_naci_para_estar_en_un_conjunto.mp3">Yo Nací para Estar en un Conjunto</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=LwqB7CcA2kI&origin=https://jartigag.github.io">Yo Nací para Estar en un Conjunto</span-->
-        <span class="simp-desc">Pereza</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/v04-nina_polaca-dolores_rayo.mp3">Dolores Rayo</span>
@@ -146,19 +165,19 @@
         <span class="simp-desc">La Paloma</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/v06-fito_y_fitipaldis-rojitas_las_orejas.mp3">Rojitas las orejas</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=myb0x-SyXdc&origin=https://jartigag.github.io">Rojitas las orejas</span-->
-        <span class="simp-desc">Fito y Fitipaldis</span>
-      </li>
-      <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/v07-zenttric-solo_quiero_bailar_en_a.mp3">Solo quiero bailar (en A)</span>
-        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=XAmFdx99qC0&origin=https://jartigag.github.io">Solo quiero bailar</span-->
-        <span class="simp-desc">Zenttric</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v02-los_zigarros-disparame.mp3">Dispárame</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=IBSOmUdhRVs&origin=https://jartigag.github.io">Dispárame</span-->
+        <span class="simp-desc">Los Zigarros</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/v08-los_zigarros-dentro_de_la_ley.mp3">Dentro De La Ley</span>
         <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=1mV4yNaXNEI&origin=https://jartigag.github.io">Dentro De La Ley</span-->
         <span class="simp-desc">Los Zigarros</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v03-pereza-yo_naci_para_estar_en_un_conjunto.mp3">Yo Nací para Estar en un Conjunto</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=LwqB7CcA2kI&origin=https://jartigag.github.io">Yo Nací para Estar en un Conjunto</span-->
+        <span class="simp-desc">Pereza</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/v09-pereza-lady_madrid_en_f.mp3">Lady Madrid (en F)</span>
@@ -169,6 +188,11 @@
         <span class="simp-source" data-src="https://jartigag.github.io/rec/v10-loquillo_y_los_trogloditas-el_rompeolas.mp3">El rompeolas</span>
         <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=qXj9EggtGio&origin=https://jartigag.github.io">El rompeolas</span-->
         <span class="simp-desc">Loquillo y Los Trogloditas</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/v06-fito_y_fitipaldis-rojitas_las_orejas.mp3">Rojitas las orejas</span>
+        <!--span class="simp-source" data-src="https://music.youtube.com/watch?v=myb0x-SyXdc&origin=https://jartigag.github.io">Rojitas las orejas</span-->
+        <span class="simp-desc">Fito y Fitipaldis</span>
       </li>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/v11-fito_y_fitipaldis-por_la_boca_vive_el_pez.mp3">Por la boca vive el pez</span>
