--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
   <h1 style="text-align: center">[2025] demo2-jartiga</h1><a id="demo2-jartiga" href="#demo2-jartiga"></a>
     <ul>
       <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Álbum "Contradicto", del tirón</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+    <ul>
+      <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos De Notas</span>
         <span class="simp-desc">jartiga y jparra</span>
       </li>
