--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Nena</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Nena</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Noches En Vilo</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Noches En Vilo</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
@@ -139,7 +139,7 @@
   <h1 style="text-align: center">[2025] demo2-jartiga</h1><a id="demo2-jartiga" href="#demo2-jartiga"></a>
     <ul>
       <li class="simp-active">
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Álbum "Contradicto", del tirón</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Álbum "Contradicto", del tirón (empieza 02:13)</span>
         <span class="simp-desc">jartiga</span>
       </li>
     <ul>
