--- a/index.html
+++ b/index.html
@@ -90,11 +90,15 @@
   <h1 style="text-align: center">[2012/24] maqueta</h1><a id="maqueta" href="#maqueta"></a>
     <ul>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Un Error Sin Ella</span>
+        <span class="simp-source" data-src="https://t.me/jartigag_blog/100?comment=244">Un Error Sin Ella</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Messie Le Noir</span>
+        <span class="simp-source" data-src="https://t.me/jartigag_blog/100?comment=245">Django</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/maqueta-3.messie_le_noir-2014.mp3">Messie Le Noir</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
