--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Nena</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Nena (empieza en 12:42)</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Noches En Vilo</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Noches En Vilo (empieza en 08:30)</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
