--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <meta property="og:description"  content="recordings"/>
 <meta property="og:image"        content="https://jartigag.github.io/rec/sc.png"/>
 <meta name="twitter:card"        content="summary_large_image"/>
-<meta name="twitter:site"        content="jartigag.github.io"/>
+<meta name="twitter:site"        content="https://jartigag.github.io"/>
 <meta name="twitter:title"       content="rec/"/>
 <meta name="twitter:description" content="recordings"/>
 <meta name="twitter:image"       content="https://jartigag.github.io/rec/sc.png"/>
 <style>
-  @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-  *,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
+  /*,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}*/
   input,button{outline:none;}
   a,a:hover,a:visited{color:#ddd;text-decoration:none;}
   .flex{display:-webkit-flex;display:flex;}
@@ -110,7 +109,7 @@
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/">Pero Ya No Es</span>
+        <span class="simp-source" data-src="#">Pero Ya No Es</span>
         <span class="simp-desc">jartiga</span>
       </li>
     </ul>
