--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   }
 </style>
 <title>rec/</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <div id="simp" data-config='{"shide_top":false,"shide_btm":false,"auto_load":false}'>
