--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
         <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Álbum "Contradicto", del tirón (empieza 02:13)</span>
         <span class="simp-desc">jartiga</span>
       </li>
-    <ul>
       <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/20250828-demo1-jartigayjparra-trozos_de_notas.mp3">Trozos De Notas</span>
         <span class="simp-desc">jartiga y jparra</span>
@@ -210,9 +209,8 @@
       </li>
     </ul>
   </div>
-  <div class="simp-footer">made with 💙 by jartigag</br>(based on sekedus' player)</div>
+  <div class="simp-footer">made with 💙 by jartigag<br/>(based on sekedus' player)</div>
 </div>
-</body>
 <script>
 /*
 Example: https://setstori.blogspot.com/2016/01/nightmareside.html
@@ -514,4 +512,5 @@ if (document.querySelector('#simp')) {
   simp_startScript();
 }
 </script>
+</body>
 </html>
