--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="twitter:description" content="recordings"/>
 <meta name="twitter:image"       content="https://jartigag.github.io/rec/sc.png"/>
 <style>
-  /*,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}*/
+  ,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
   input,button{outline:none;}
   a,a:hover,a:visited{color:#ddd;text-decoration:none;}
   .flex{display:-webkit-flex;display:flex;}
