--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="twitter:description" content="recordings"/>
 <meta name="twitter:image"       content="https://jartigag.github.io/rec/sc.png"/>
 <style>
-  ,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
+  *,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
   input,button{outline:none;}
   a,a:hover,a:visited{color:#ddd;text-decoration:none;}
   .flex{display:-webkit-flex;display:flex;}
@@ -102,15 +102,15 @@
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Nena (empieza en 12:42)</span>
-        <span class="simp-desc">jartiga</span>
-      </li>
-      <li>
         <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Noches En Vilo (empieza en 08:30)</span>
         <span class="simp-desc">jartiga</span>
       </li>
       <li>
-        <span class="simp-source" data-src="#">Pero Ya No Es</span>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Nena (empieza en 12:42)</span>
+        <span class="simp-desc">jartiga</span>
+      </li>
+      <li>
+        <span class="simp-source" data-src="https://jartigag.github.io/rec/contradicto_de_tiron-20251219.mp3">Pero Ya No Es (falta por subir)</span>
         <span class="simp-desc">jartiga</span>
       </li>
     </ul>
