--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <meta name="twitter:title"       content="rec/"/>
 <meta name="twitter:description" content="recordings"/>
 <meta name="twitter:image"       content="https://jartigag.github.io/rec/sc.png"/>
+<script src="https://kit.fontawesome.com/bdd74dabb5.js" crossorigin="anonymous"></script>
 <style>
   *,*:before,*:after{outline:0;-webkit-box-sizing:border-box;box-sizing:border-box;}
   input,button{outline:none;}
